# makedeb

./: .data.json  .drone.jsonnet  .drone.yml  .gitignore  .gitmodules  4.2  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  PKGBUILD  PKGBUILD.local  PKGBUILD_BETA.local  README.md  The  WORKING_PACKAGES.md  build.sh  clean.sh  fixmod.sh  gen-po.sh  install.sh  justfile  main.file  makedeb  makedeb.sh  makepkg.deb  package.sh  packages.db  patreon-sponsors.txt  pkgbuild.sh  prepare.sh  scripts.sh  toast.yml
.drone/: build.sh  drone.jsonnet  publish.sh
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml
PKGBUILD/: PKGBUILD  README.md  TEMPLATE.PKGBUILD  package.sh  pkgbuild.sh
PKGBUILDs/: README.md  TEMPLATE.PKGBUILD  configure.sh  definitions.sh
assets/: README.md
completions/: makedeb.bash
debian/: README  README.source  changelog  control  copyright  files  rules  watch
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
man/: makedeb-extension.5.adoc  makedeb.8.adoc  pkgbuild.5.adoc
po/: es.po  fr.po  hi.po  makedeb.pot  nl.po  pt_BR.po  sv.po
scripts/: aur_pkgbuild_select.sh  build.sh  commit.sh  fixmod.sh  gen-rel.sh  github_pull.sh  github_release.sh  package.sh  package_gen.sh  pkgbuild.sh  pkgbuild_gen.sh  publish.sh  versions.sh
src/: 1_1-1_amd64.deb  PKGBUILD  main.sh  makedeb  makedeb.org  makedeb.sh  makepkg-template  makepkg.conf  packages.db  patch.sh  test
src/makedeb-rs/: Cargo.toml  README.md
src/makedeb-rs/src/: autoremove.rs  cache.rs  install.rs  main.rs  message.rs  resolve.rs  util.rs
(+352 files in other folders)
