[package]
name = "makedeb-rs"
# We don't need to worry about managing this version since it's just an internal
# tool used only by makedeb. We can just look at the version of makedeb to
# determine what release of this is installed.
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.12", features = ["derive"] }
colored = "2.0.0"
exitcode = "1.1.2"
quit = "1.1.4"
rust-apt = { git = "https://gitlab.com/volian/rust-apt", branch = "fix/no-debfile-headers" }
tempfile = "3.5.0"
users = "0.11.0"
